--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "author": "priya chaudhary",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/priyach19/Codeial.git"
